2007-10-15  Chris Morley
	
	* src/babel.cpp: Abort and error message when SetInAndOutFormats
	fails. Fixes bug #1813493
	
2007-10-14  Chris Morley

	* src/fingerprints/finger3.cpp, src/formats/fingerprintformat.cpp
	Change format for -xs format again: functional groups tab 
	separated. Suggested by Chris Swain.

2007-10-11  Chris Morley

	* src/format/mdlformat.cpp: Remove warning about incorrect title
	line which is sometimes output when it should not be, bug#1752435
	
	(ParseAliasText) ignore alias blocks with just "?" Suggestion by
	Rajarshi Guha
	
	* src/fingerprints/finger3.cpp, src/formats/fingerprintformat.cpp:
	Slight change in output formatting for -xs and -xu options
	
	* src/formats/xml/cmlformat.cpp: still trying to deallocate
	strings supplied by libxml2. Should be using free (not delete)
	but still not working with my compiler so still commented out.

2007-10-08  Chris Morley

	* src/formats/xml/cmlformat.cpp: removed delete statement which
	probably is responsible for bug #1792938. See 2007-08-19
	
2007-10-08  Chris Morley

	* src/formats/mdformat.cpp: output v2000 formal charge as M CHG
	statement rather than in the atom block, which is in correct when
	M RAD or M ISO apppear. Suggestion by p.mortenson bug #1796960

2007-10-05  Chris Morley

	* include/openbabel/forcefield.h: correct back to OBFPRT
	and add default definaition as nothing.

	* include/openbabel/groupcontrib.h: add back to OBDESC
	and add default definition as nothing.
	
	* src/forcefields/forcefieldmmff94.cpp: add initial value for 
	energy and comment out several unused variables to reduce compiler
	messages.
	
	* src/formats/getinchi.cpp: Now reads unquoted InChIs split with
	XML elements like <br />
	
	* src/formats/inchiformat.cpp: Make InChIKey output replace 
	normal InChI rather than adding to it. Still Windows only until
	1.02beta InChI source files added.
	
	* src/formats/smilesformat.cpp(ParseRingBond): ensured that atoms