@@ -167,19 +167,25 @@ int main(int argc,char *argv[])
                   }
                 case '?':
                 case 'H':
-                  if(isalnum(argv[arg][2]))
+                  if(isalnum(argv[arg][2]) || arg==argc-2)
                     {
                       if(strncasecmp(argv[arg]+2,"all",3))
                         {
-                          OBFormat* pFormat = Conv.FindFormat(argv[arg]+2);
+                          const char* pID= (arg==argc-2) ? argv[arg+1] : argv[arg]+2;
+                          OBFormat* pFormat = Conv.FindFormat(pID);
                           if(pFormat)
                             {
-                              cout << argv[arg]+2 << "  " << pFormat->Description() << endl;
+                              cout << pID << "  " << pFormat->Description() << endl;
+                              if(pFormat->Flags() & NOTWRITABLE)
+                                cout << " This format is Read-only" << endl;
+                              if(pFormat->Flags() & NOTREADABLE)
+                                cout << " This format is Write-only" << endl;
+
                               if(strlen(pFormat->SpecificationURL()))
                                 cout << "Specification at: " << pFormat->SpecificationURL() << endl;
                             }
                           else
-                            cout << "Format type: " << argv[arg]+2 << " was not recognized" <<endl;
+                            cout << "Format type: " << pID << " was not recognized" <<endl;
                         }
                       else
                         {
@@ -295,14 +301,16 @@ int main(int argc,char *argv[])
         }
     }
   
-  if(!Conv.SetInAndOutFormats(pInFormat,pOutFormat))
-  {
-    if(!Conv.GetInFormat())
+    if(!Conv.SetInFormat(pInFormat))
+    {
       cerr << "Invalid input format" << endl;
-    if(!Conv.GetOutFormat())
+      usage();
+    }
+    if(!Conv.SetOutFormat(pOutFormat))
+    {
       cerr << "Invalid output format" << endl;
-    usage();
-  }
+      usage();
+    }
   
   if(SplitOrBatch)
     {
